# Spout2

./: CMakeLists.txt
SpoutSDK/Source/: CMakeLists.txt  SpoutGLDXinterop.cpp  SpoutSDK.cpp
